--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "private": true,
   "devDependencies": {
+    "babelify": "^6.1.3",
     "browser-sync": "^2.7.7",
+    "browserify": "^11.0.1",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^1.1.1",
     "glob": "^5.0.6",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-babel": "^5.2.0",
     "gulp-cache": "^0.2.8",
     "gulp-changed": "^1.0.0",
     "gulp-cssmin": "^0.1.7",
@@ -22,11 +25,14 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.1.2",
     "gulp-vulcanize": "^6.0.0",
+    "istextorbinary": "^1.0.2",
     "jshint-stylish": "^2.0.0",
     "merge-stream": "^0.1.7",
     "opn": "^1.0.0",
+    "replacestream": "^4.0.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
+    "vinyl-source-stream": "^1.1.0",
     "vulcanize": ">= 1.4.2",
     "web-component-tester": "^3.1.3"
   },
@@ -36,5 +42,8 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "readable-stream": "^2.0.2"
   }
 }
