--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "amd-optimize": "^0.5.0",
     "babelify": "^6.1.3",
     "browser-sync": "^2.7.7",
     "browserify": "^11.0.1",
