--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "iron-jsonp-library": "PolymerElements/iron-jsonp-library#~1.0.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
